--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,5 +1,11 @@
 {
   "tasks": {
     "dev": "deno run --allow-net --allow-read --allow-env --watch main.ts"
+  },
+  "imports": {
+    "oak": "https://deno.land/x/oak@v12.1.0/mod.ts",
+    "cors": "https://deno.land/x/cors@v1.2.2/mod.ts",
+    "fmt/": "https://deno.land/std@0.185.0/fmt/",
+    "supabase": "https://esm.sh/@supabase/supabase-js@2.21.0"
   }
 }
